--- a/src/main.css
+++ b/src/main.css
@@ -43,7 +43,7 @@ body {
 .container aside iframe {
   width: 100%;
   aspect-ratio: 16/9;
-  margin-bottom: 2rem;
+  margin: 1rem 0;
 }
 
 .container aside a {
@@ -82,6 +82,7 @@ body {
   color: white;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 1rem;
   height: 3rem;
 }
@@ -103,6 +104,7 @@ body {
 .radio-group {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 1rem;
 }
 
@@ -168,6 +170,7 @@ body {
 .accent-modes-view {
   color: white;
   display: flex;
+  justify-content: center;
   gap: 4rem;
   margin-top: 1rem;
 }
@@ -175,6 +178,7 @@ body {
 .accent-modes-view h3 {
   font-size: 1rem;
   margin-top: 0;
+  text-align: center;
 }
 
 header p {
